# manga-grabber-tools

./: README.md  downloader.py  pyproject.toml
.github/workflows/: tests.yml
manga_grabber/: mangalib.py
tests/: test_downloader_cli.py  test_hentailib_download_in_ci.py
