[project]
name = "manga-grabber-tools"
description = "CLI wrapper for manga-grabber with batch download support"
dynamic = ["version"]
authors = [
    {name = "Nikita Bystrov", email = "bystrovno@basealt.ru"}
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "aiohttp",
    "beautifulsoup4",
    "fpdf2",
    "pillow",
    "natsort",
    "fonttools",
    "ebooklib",
    "click",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: AsyncIO",
    "Framework :: aiohttp",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[project.scripts]
mangagrabber = "manga_grabber.main:main"

# Poetry-specific настройки
[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
black = "^24.0.0"
mypy = "^1.0.0"
types-beautifulsoup4 = "^4.12.0"
types-fpdf2 = "^2.7.0"
pytest-timeout = "^2.4.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.24.0"
coverage = "^7.4.0"

# Отключаем poetry-dynamic-versioning для простоты CI
[tool.poetry-dynamic-versioning]
enable = false

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# Настройки pytest
[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "module"
timeout = 300
filterwarnings = [
    "ignore::DeprecationWarning",
]

# Настройки black
[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312', 'py313']

# Настройки mypy
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
