[project]
name = "manga-grabber-tools"
description = "CLI wrapper for manga-grabber with batch download support"
dynamic = ["version"]
authors = [
    {name = "qwertyadrian", email = "me@qwertyadrian.ru"},
    {name = "Nikita Bystrov", email = "bystrovno@basealt.ru"}
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "aiohttp",
    "beautifulsoup4",
    "fpdf2",
    "pillow",
    "natsort",
    "fonttools",
    "ebooklib",
    "click",
]

[project.scripts]
mangagrabber = "manga_grabber.main:main"

# Poetry settings
[tool.poetry]
version = "0.1.0"

# 🔥 Добавить секцию packages:
[[tool.poetry.packages]]
include = "manga_grabber"
from = "."

[tool.poetry.group.dev.dependencies]
black = "^24.0.0"
mypy = "^1.0.0"
types-beautifulsoup4 = "^4.12.0"
types-fpdf2 = "^2.7.0"
pytest-timeout = "^2.4.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.24.0"
coverage = "^7.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "module"
timeout = 300
